# ni-evnf

./: .gitignore  .gitmodules  README.md  requirements.txt
common/: helpers.py
edpi/: cy_edpi.pyx  edpi.c  edpi.py  edpi_alone_test.py  make_edpi.sh  make_pf_ring.sh
edpi/edpi/: libndpi.pc.in
edpi/edpi/ebpf_tap/: vtap_ndpi.c  vtap_ndpi.py
edpi/edpi/example/: Makefile.am  ndpiReader.c  ndpi_util.c  ndpi_util.h
edpi/edpi_reader/: Makefile.am  edpi_hook.patch  edpi_reader.c  make.sh  protos_pktgen.txt
edpi/nDPI/: Makefile.am  configure.seed
edpi/nDPI/edpi_reader/: ndpiReader.c  ndpi_util.c
edpi/nDPI/example/: ndpiReader.c  ndpi_util.c  ndpi_util.h  protos.txt
eft/: eft.c  eft.py
efw/: efw.c  efw.py
efwlb/: efwlb.py
elb/: elb.c  elb.py
pktgen/: parameters.sh  pktgen.sh
scripts/: add_sr_iov_virt.sh  benchmark_single_vnf.sh  enable_xdp_virt.sh  irq_affinity.sh  xdp_tweak_82599.sh  xdp_tweak_82599_sr_iov.sh
scripts/pktgen/: README.rst  pktgen.sh
